--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <div id="speed-panel">
     <h3>Orbital Speed Control</h3>
+    <button id="speed-toggle" class="btn">⚡ Speed</button>
     <div class="speed-control">
       <div class="speed-row"><span class="planet-label">Mercury</span><input type="range" min="0.1" max="5" step="0.1" value="2" id="speed-mercury"><span id="val-mercury">2</span></div>
       <div class="speed-row"><span class="planet-label">Venus</span><input type="range" min="0.1" max="5" step="0.1" value="1.5" id="speed-venus"><span id="val-venus">1.5</span></div>
